src/parser/parser.output
Terminals unused in grammar

   "par"
   "subStringFirstOf"
   "subStringLastOf"
   "declare-variable"


State 202 conflicts: 5 shift/reduce


Grammar

    0 $accept: script "end of file"

    1 script: command_list

    2 command_list: command_list command
    3             | %empty

    4 command: "(" "set-logic" "symbol" ")"
    5        | "(" "set-option" option ")"
    6        | "(" "set-info" attribute ")"
    7        | "(" "declare-sort" "symbol" "number" ")"
    8        | "(" "define-sort" "symbol" "(" symbol_list ")" sort ")"
    9        | "(" "declare-fun" "symbol" "(" sort_list ")" sort ")"
   10        | "(" "declare-fun" "symbol" sort ")"
   11        | "(" "define-fun" "symbol" "(" sorted_var_list ")" sort term ")"
   12        | "(" "push" "number" ")"
   13        | "(" "pop" "number" ")"
   14        | "(" "assert" term ")"
   15        | "(" "check-sat" ")"
   16        | "(" "check-sat" "symbol" ")"
   17        | "(" "check-sat-and-count" "number" ")"
   18        | "(" "check-sat-and-count" "number" "symbol" ")"
   19        | "(" "get-assertions" ")"
   20        | "(" "get-model" ")"
   21        | "(" "get-proof" ")"
   22        | "(" "get-unsat-core" ")"
   23        | "(" "get-value" term_list_ ")"
   24        | "(" "get-assignment" ")"
   25        | "(" "get-option" "keyword" ")"
   26        | "(" "get-info" info_flag ")"
   27        | "(" "exit" ")"

   28 option: attribute

   29 info_flag: "keyword"

   30 symbol_list: symbol_list_
   31            | %empty

   32 symbol_list_: symbol_list_ "symbol"
   33             | "symbol"

   34 term_list_: term_list_ term
   35           | term

   36 term: "(" "!" term attribute_list_ ")"
   37     | "(" "exists" "(" sorted_var_list_ ")" term ")"
   38     | "(" "forall" "(" sorted_var_list_ ")" term ")"
   39     | "(" "let" "(" var_binding_list_ ")" term ")"
   40     | "(" "and" term_list_ ")"
   41     | "(" "or" term_list_ ")"
   42     | "(" "not" term ")"
   43     | "(" "-" term ")"
   44     | "(" "-" term term ")"
   45     | "(" "+" term_list_ ")"
   46     | "(" "*" term_list_ ")"
   47     | "(" "=" term term ")"
   48     | "(" "!=" term term ")"
   49     | "(" ">" term term ")"
   50     | "(" ">=" term term ")"
   51     | "(" "<" term term ")"
   52     | "(" "<=" term term ")"
   53     | "(" "concat" term_list_ ")"
   54     | "(" "in" term term ")"
   55     | "(" "notIn" term term ")"
   56     | "(" "len" term ")"
   57     | "(" "contains" term term ")"
   58     | "(" "notContains" term term ")"
   59     | "(" "begins" term term ")"
   60     | "(" "notBegins" term term ")"
   61     | "(" "ends" term term ")"
   62     | "(" "notEnds" term term ")"
   63     | "(" "indexOf" term term ")"
   64     | "(" "indexOf" term term term ")"
   65     | "(" "lastIndexOf" term term ")"
   66     | "(" "lastIndexOf" term term term ")"
   67     | "(" "charAt" term term ")"
   68     | "(" "subString" term term ")"
   69     | "(" "subString" term term term ")"
   70     | "(" "subStringLength" term term term ")"
   71     | "(" "toUpper" term ")"
   72     | "(" "toLower" term ")"
   73     | "(" "trim" term term ")"
   74     | "(" "toString" term ")"
   75     | "(" "toInt" term ")"
   76     | "(" "replace" term term term ")"
   77     | "(" "count" term term ")"
   78     | "(" "ite" term term term ")"
   79     | "(" "re.++" term_list_ ")"
   80     | "(" "re.or" term_list_ ")"
   81     | "(" "re.union" term_list_ ")"
   82     | "(" "re.inter" term_list_ ")"
   83     | "(" "re.*" term ")"
   84     | "(" "re.+" term ")"
   85     | "(" "re.opt" term ")"
   86     | "(" "re.range" term term ")"
   87     | "(" "str.to.re" term ")"
   88     | "(" qual_identifier term_list_ ")"
   89     | qual_identifier
   90     | term_constant

   91 sorted_var_list: sorted_var_list_
   92                | %empty

   93 sorted_var_list_: sorted_var_list_ sorted_var
   94                 | sorted_var

   95 sorted_var: "(" "symbol" sort ")"

   96 var_binding_list_: var_binding_list_ var_binding
   97                  | var_binding

   98 var_binding: "(" "symbol" term ")"

   99 qual_identifier: "(" "as" identifier sort ")"
  100                | identifier

  101 term_constant: spec_constant

  102 attribute_list_: attribute_list_ attribute
  103                | attribute

  104 attribute: "keyword" attribute_value
  105          | "keyword"

  106 attribute_value: "(" s_expr_list ")"
  107                | "symbol"
  108                | spec_constant

  109 sort_list: sort_list_
  110          | %empty

  111 sort_list_: sort_list_ sort
  112           | sort

  113 sort: "(" identifier sort_list_ ")"
  114     | identifier
  115     | t_variable

  116 t_variable: "TBool"
  117           | "TInt"
  118           | "TString"

  119 identifier: "(" "_" "symbol" numeral_list_ ")"
  120           | "symbol"

  121 numeral_list_: numeral_list_ "number"
  122              | "number"

  123 s_expr_list: s_expr_list_
  124            | %empty

  125 s_expr_list_: s_expr_list_ s_expr
  126             | s_expr

  127 s_expr: "(" s_expr_list ")"
  128       | "keyword"
  129       | "symbol"
  130       | spec_constant

  131 spec_constant: "bool"
  132              | "binary"
  133              | "hexadecimal"
  134              | "number"
  135              | "decimal"
  136              | "string"
  137              | "regex"


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
"(" (258) 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
    25 26 27 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
    54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
    75 76 77 78 79 80 81 82 83 84 85 86 87 88 95 98 99 106 113 119
    127
")" (259) 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
    25 26 27 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
    54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
    75 76 77 78 79 80 81 82 83 84 85 86 87 88 95 98 99 106 113 119
    127
"!" (260) 36
"_" (261) 119
"as" (262) 99
"exists" (263) 37
"forall" (264) 38
"let" (265) 39
"par" (266)
"and" (267) 40
"or" (268) 41
"not" (269) 42
"-" (270) 43 44
"+" (271) 45
"*" (272) 46
"=" (273) 47
"!=" (274) 48
">" (275) 49
">=" (276) 50
"<" (277) 51
"<=" (278) 52
"concat" (279) 53
"in" (280) 54
"notIn" (281) 55
"len" (282) 56
"contains" (283) 57
"notContains" (284) 58
"begins" (285) 59
"notBegins" (286) 60
"ends" (287) 61
"notEnds" (288) 62
"indexOf" (289) 63 64
"lastIndexOf" (290) 65 66
"charAt" (291) 67
"subString" (292) 68 69
"subStringLength" (293) 70
"subStringFirstOf" (294)
"subStringLastOf" (295)
"toUpper" (296) 71
"toLower" (297) 72
"trim" (298) 73
"toString" (299) 74
"toInt" (300) 75
"replace" (301) 76
"count" (302) 77
"ite" (303) 78
"re.++" (304) 79
"re.or" (305) 80
"re.union" (306) 81
"re.inter" (307) 82
"re.*" (308) 83
"re.+" (309) 84
"re.opt" (310) 85
"re.range" (311) 86
"str.to.re" (312) 87
"TBool" (313) 116
"TInt" (314) 117
"TString" (315) 118
"assert" (316) 14
"check-sat" (317) 15 16
"check-sat-and-count" (318) 17 18
"declare-fun" (319) 9 10
"declare-variable" (320)
"declare-sort" (321) 7
"define-fun" (322) 11
"define-sort" (323) 8
"exit" (324) 27
"get-assertions" (325) 19
"get-assignment" (326) 24
"get-info" (327) 26
"get-model" (328) 20
"get-option" (329) 25
"get-proof" (330) 21
"get-unsat-core" (331) 22
"get-value" (332) 23
"pop" (333) 13
"push" (334) 12
"set-logic" (335) 4
"set-info" (336) 6
"set-option" (337) 5
"bool" (338) 131
"binary" (339) 132
"decimal" (340) 135
"hexadecimal" (341) 133
"keyword" (342) 25 29 104 105 128
"number" (343) 7 12 13 17 18 121 122 134
"string" (344) 136
"regex" (345) 137
"symbol" (346) 4 7 8 9 10 11 16 18 32 33 95 98 107 119 120 129


Nonterminals, with rules where they appear

$accept (92)
    on left: 0
script (93)
    on left: 1, on right: 0
command_list (94)
    on left: 2 3, on right: 1 2
command (95)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27, on right: 2
option (96)
    on left: 28, on right: 5
info_flag (97)
    on left: 29, on right: 26
symbol_list (98)
    on left: 30 31, on right: 8
symbol_list_ (99)
    on left: 32 33, on right: 30 32
term_list_ (100)
    on left: 34 35, on right: 23 34 40 41 45 46 53 79 80 81 82 88
term (101)
    on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
    54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
    75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90, on right: 11 14
    34 35 36 37 38 39 42 43 44 47 48 49 50 51 52 54 55 56 57 58 59
    60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 83 84
    85 86 87 98
sorted_var_list (102)
    on left: 91 92, on right: 11
sorted_var_list_ (103)
    on left: 93 94, on right: 37 38 91 93
sorted_var (104)
    on left: 95, on right: 93 94
var_binding_list_ (105)
    on left: 96 97, on right: 39 96
var_binding (106)
    on left: 98, on right: 96 97
qual_identifier (107)
    on left: 99 100, on right: 88 89
term_constant (108)
    on left: 101, on right: 90
attribute_list_ (109)
    on left: 102 103, on right: 36 102
attribute (110)
    on left: 104 105, on right: 6 28 102 103
attribute_value (111)
    on left: 106 107 108, on right: 104
sort_list (112)
    on left: 109 110, on right: 9
sort_list_ (113)
    on left: 111 112, on right: 109 111 113
sort (114)
    on left: 113 114 115, on right: 8 9 10 11 95 99 111 112
t_variable (115)
    on left: 116 117 118, on right: 115
identifier (116)
    on left: 119 120, on right: 99 100 113 114
numeral_list_ (117)
    on left: 121 122, on right: 119 121
s_expr_list (118)
    on left: 123 124, on right: 106 127
s_expr_list_ (119)
    on left: 125 126, on right: 123 125
s_expr (120)
    on left: 127 128 129 130, on right: 125 126
spec_constant (121)
    on left: 131 132 133 134 135 136 137, on right: 101 108 130


State 0

    0 $accept: . script "end of file"

    $default  reduce using rule 3 (command_list)

    script        go to state 1
    command_list  go to state 2


State 1

    0 $accept: script . "end of file"

    "end of file"  shift, and go to state 3


State 2

    1 script: command_list .
    2 command_list: command_list . command

    "("  shift, and go to state 4

    $default  reduce using rule 1 (script)

    command  go to state 5


State 3

    0 $accept: script "end of file" .

    $default  accept


State 4

    4 command: "(" . "set-logic" "symbol" ")"
    5        | "(" . "set-option" option ")"
    6        | "(" . "set-info" attribute ")"
    7        | "(" . "declare-sort" "symbol" "number" ")"
    8        | "(" . "define-sort" "symbol" "(" symbol_list ")" sort ")"
    9        | "(" . "declare-fun" "symbol" "(" sort_list ")" sort ")"
   10        | "(" . "declare-fun" "symbol" sort ")"
   11        | "(" . "define-fun" "symbol" "(" sorted_var_list ")" sort term ")"
   12        | "(" . "push" "number" ")"
   13        | "(" . "pop" "number" ")"
   14        | "(" . "assert" term ")"
   15        | "(" . "check-sat" ")"
   16        | "(" . "check-sat" "symbol" ")"
   17        | "(" . "check-sat-and-count" "number" ")"
   18        | "(" . "check-sat-and-count" "number" "symbol" ")"
   19        | "(" . "get-assertions" ")"
   20        | "(" . "get-model" ")"
   21        | "(" . "get-proof" ")"
   22        | "(" . "get-unsat-core" ")"
   23        | "(" . "get-value" term_list_ ")"
   24        | "(" . "get-assignment" ")"
   25        | "(" . "get-option" "keyword" ")"
   26        | "(" . "get-info" info_flag ")"
   27        | "(" . "exit" ")"

    "assert"               shift, and go to state 6
    "check-sat"            shift, and go to state 7
    "check-sat-and-count"  shift, and go to state 8
    "declare-fun"          shift, and go to state 9
    "declare-sort"         shift, and go to state 10
    "define-fun"           shift, and go to state 11
    "define-sort"          shift, and go to state 12
    "exit"                 shift, and go to state 13
    "get-assertions"       shift, and go to state 14
    "get-assignment"       shift, and go to state 15
    "get-info"             shift, and go to state 16
    "get-model"            shift, and go to state 17
    "get-option"           shift, and go to state 18
    "get-proof"            shift, and go to state 19
    "get-unsat-core"       shift, and go to state 20
    "get-value"            shift, and go to state 21
    "pop"                  shift, and go to state 22
    "push"                 shift, and go to state 23
    "set-logic"            shift, and go to state 24
    "set-info"             shift, and go to state 25
    "set-option"           shift, and go to state 26


State 5

    2 command_list: command_list command .

    $default  reduce using rule 2 (command_list)


State 6

   14 command: "(" "assert" . term ")"

    "("            shift, and go to state 27
    "bool"         shift, and go to state 28
    "binary"       shift, and go to state 29
    "decimal"      shift, and go to state 30
    "hexadecimal"  shift, and go to state 31
    "number"       shift, and go to state 32
    "string"       shift, and go to state 33
    "regex"        shift, and go to state 34
    "symbol"       shift, and go to state 35

    term             go to state 36
    qual_identifier  go to state 37
    term_constant    go to state 38
    identifier       go to state 39
    spec_constant    go to state 40


State 7

   15 command: "(" "check-sat" . ")"
   16        | "(" "check-sat" . "symbol" ")"

    ")"       shift, and go to state 41
    "symbol"  shift, and go to state 42


State 8

   17 command: "(" "check-sat-and-count" . "number" ")"
   18        | "(" "check-sat-and-count" . "number" "symbol" ")"

    "number"  shift, and go to state 43


State 9

    9 command: "(" "declare-fun" . "symbol" "(" sort_list ")" sort ")"
   10        | "(" "declare-fun" . "symbol" sort ")"

    "symbol"  shift, and go to state 44


State 10

    7 command: "(" "declare-sort" . "symbol" "number" ")"

    "symbol"  shift, and go to state 45


State 11

   11 command: "(" "define-fun" . "symbol" "(" sorted_var_list ")" sort term ")"

    "symbol"  shift, and go to state 46


State 12

    8 command: "(" "define-sort" . "symbol" "(" symbol_list ")" sort ")"

    "symbol"  shift, and go to state 47


State 13

   27 command: "(" "exit" . ")"

    ")"  shift, and go to state 48


State 14

   19 command: "(" "get-assertions" . ")"

    ")"  shift, and go to state 49


State 15

   24 command: "(" "get-assignment" . ")"

    ")"  shift, and go to state 50


State 16

   26 command: "(" "get-info" . info_flag ")"

    "keyword"  shift, and go to state 51

    info_flag  go to state 52


State 17

   20 command: "(" "get-model" . ")"

    ")"  shift, and go to state 53


State 18

   25 command: "(" "get-option" . "keyword" ")"

    "keyword"  shift, and go to state 54


State 19

   21 command: "(" "get-proof" . ")"

    ")"  shift, and go to state 55


State 20

   22 command: "(" "get-unsat-core" . ")"

    ")"  shift, and go to state 56


State 21

   23 command: "(" "get-value" . term_list_ ")"

    "("            shift, and go to state 27
    "bool"         shift, and go to state 28
    "binary"       shift, and go to state 29
    "decimal"      shift, and go to state 30
    "hexadecimal"  shift, and go to state 31
    "number"       shift, and go to state 32
    "string"       shift, and go to state 33
    "regex"        shift, and go to state 34
    "symbol"       shift, and go to state 35

    term_list_       go to state 57
    term             go to state 58
    qual_identifier  go to state 37
    term_constant    go to state 38
    identifier       go to state 39
    spec_constant    go to state 40


State 22

   13 command: "(" "pop" . "number" ")"

    "number"  shift, and go to state 59


State 23

   12 command: "(" "push" . "number" ")"

    "number"  shift, and go to state 60


State 24

    4 command: "(" "set-logic" . "symbol" ")"

    "symbol"  shift, and go to state 61


State 25

    6 command: "(" "set-info" . attribute ")"

    "keyword"  shift, and go to state 62

    attribute  go to state 63


State 26

    5 command: "(" "set-option" . option ")"

    "keyword"  shift, and go to state 62

    option     go to state 64
    attribute  go to state 65


State 27

   36 term: "(" . "!" term attribute_list_ ")"
   37     | "(" . "exists" "(" sorted_var_list_ ")" term ")"
   38     | "(" . "forall" "(" sorted_var_list_ ")" term ")"
   39     | "(" . "let" "(" var_binding_list_ ")" term ")"
   40     | "(" . "and" term_list_ ")"
   41     | "(" . "or" term_list_ ")"
   42     | "(" . "not" term ")"
   43     | "(" . "-" term ")"
   44     | "(" . "-" term term ")"
   45     | "(" . "+" term_list_ ")"
   46     | "(" . "*" term_list_ ")"
   47     | "(" . "=" term term ")"
   48     | "(" . "!=" term term ")"
   49     | "(" . ">" term term ")"
   50     | "(" . ">=" term term ")"
   51     | "(" . "<" term term ")"
   52     | "(" . "<=" term term ")"
   53     | "(" . "concat" term_list_ ")"
   54     | "(" . "in" term term ")"
   55     | "(" . "notIn" term term ")"
   56     | "(" . "len" term ")"
   57     | "(" . "contains" term term ")"
   58     | "(" . "notContains" term term ")"
   59     | "(" . "begins" term term ")"
   60     | "(" . "notBegins" term term ")"
   61     | "(" . "ends" term term ")"
   62     | "(" . "notEnds" term term ")"
   63     | "(" . "indexOf" term term ")"
   64     | "(" . "indexOf" term term term ")"
   65     | "(" . "lastIndexOf" term term ")"
   66     | "(" . "lastIndexOf" term term term ")"
   67     | "(" . "charAt" term term ")"
   68     | "(" . "subString" term term ")"
   69     | "(" . "subString" term term term ")"
   70     | "(" . "subStringLength" term term term ")"
   71     | "(" . "toUpper" term ")"
   72     | "(" . "toLower" term ")"
   73     | "(" . "trim" term term ")"
   74     | "(" . "toString" term ")"
   75     | "(" . "toInt" term ")"
   76     | "(" . "replace" term term term ")"
   77     | "(" . "count" term term ")"
   78     | "(" . "ite" term term term ")"
   79     | "(" . "re.++" term_list_ ")"
   80     | "(" . "re.or" term_list_ ")"
   81     | "(" . "re.union" term_list_ ")"
   82     | "(" . "re.inter" term_list_ ")"
   83     | "(" . "re.*" term ")"
   84     | "(" . "re.+" term ")"
   85     | "(" . "re.opt" term ")"
   86     | "(" . "re.range" term term ")"
   87     | "(" . "str.to.re" term ")"
   88     | "(" . qual_identifier term_list_ ")"
   99 qual_identifier: "(" . "as" identifier sort ")"
  119 identifier: "(" . "_" "symbol" numeral_list_ ")"

    "("                shift, and go to state 66
    "!"                shift, and go to state 67
    "_"                shift, and go to state 68
    "as"               shift, and go to state 69
    "exists"           shift, and go to state 70
    "forall"           shift, and go to state 71
    "let"              shift, and go to state 72
    "and"              shift, and go to state 73
    "or"               shift, and go to state 74
    "not"              shift, and go to state 75
    "-"                shift, and go to state 76
    "+"                shift, and go to state 77
    "*"                shift, and go to state 78
    "="                shift, and go to state 79
    "!="               shift, and go to state 80
    ">"                shift, and go to state 81
    ">="               shift, and go to state 82
    "<"                shift, and go to state 83
    "<="               shift, and go to state 84
    "concat"           shift, and go to state 85
    "in"               shift, and go to state 86
    "notIn"            shift, and go to state 87
    "len"              shift, and go to state 88
    "contains"         shift, and go to state 89
    "notContains"      shift, and go to state 90
    "begins"           shift, and go to state 91
    "notBegins"        shift, and go to state 92
    "ends"             shift, and go to state 93
    "notEnds"          shift, and go to state 94
    "indexOf"          shift, and go to state 95
    "lastIndexOf"      shift, and go to state 96
    "charAt"           shift, and go to state 97
    "subString"        shift, and go to state 98
    "subStringLength"  shift, and go to state 99
    "toUpper"          shift, and go to state 100
    "toLower"          shift, and go to state 101
    "trim"             shift, and go to state 102
    "toString"         shift, and go to state 103
    "toInt"            shift, and go to state 104
    "replace"          shift, and go to state 105
    "count"            shift, and go to state 106
    "ite"              shift, and go to state 107
    "re.++"            shift, and go to state 108
    "re.or"            shift, and go to state 109
    "re.union"         shift, and go to state 110
    "re.inter"         shift, and go to state 111
    "re.*"             shift, and go to state 112
    "re.+"             shift, and go to state 113
    "re.opt"           shift, and go to state 114
    "re.range"         shift, and go to state 115
    "str.to.re"        shift, and go to state 116
    "symbol"           shift, and go to state 35

    qual_identifier  go to state 117
    identifier       go to state 39


State 28

  131 spec_constant: "bool" .

    $default  reduce using rule 131 (spec_constant)


State 29

  132 spec_constant: "binary" .

    $default  reduce using rule 132 (spec_constant)


State 30

  135 spec_constant: "decimal" .

    $default  reduce using rule 135 (spec_constant)


State 31

  133 spec_constant: "hexadecimal" .

    $default  reduce using rule 133 (spec_constant)


State 32

  134 spec_constant: "number" .

    $default  reduce using rule 134 (spec_constant)


State 33

  136 spec_constant: "string" .

    $default  reduce using rule 136 (spec_constant)


State 34

  137 spec_constant: "regex" .

    $default  reduce using rule 137 (spec_constant)


State 35

  120 identifier: "symbol" .

    $default  reduce using rule 120 (identifier)


State 36

   14 command: "(" "assert" term . ")"

    ")"  shift, and go to state 118


State 37

   89 term: qual_identifier .

    $default  reduce using rule 89 (term)


State 38

   90 term: term_constant .

    $default  reduce using rule 90 (term)


State 39

  100 qual_identifier: identifier .

    $default  reduce using rule 100 (qual_identifier)


State 40

  101 term_constant: spec_constant .

    $default  reduce using rule 101 (term_constant)


State 41

   15 command: "(" "check-sat" ")" .

    $default  reduce using rule 15 (command)


State 42

   16 command: "(" "check-sat" "symbol" . ")"

    ")"  shift, and go to state 119


State 43

   17 command: "(" "check-sat-and-count" "number" . ")"
   18        | "(" "check-sat-and-count" "number" . "symbol" ")"

    ")"       shift, and go to state 120
    "symbol"  shift, and go to state 121


State 44

    9 command: "(" "declare-fun" "symbol" . "(" sort_list ")" sort ")"
   10        | "(" "declare-fun" "symbol" . sort ")"

    "("        shift, and go to state 122
    "TBool"    shift, and go to state 123
    "TInt"     shift, and go to state 124
    "TString"  shift, and go to state 125
    "symbol"   shift, and go to state 35

    sort        go to state 126
    t_variable  go to state 127
    identifier  go to state 128


State 45

    7 command: "(" "declare-sort" "symbol" . "number" ")"

    "number"  shift, and go to state 129


State 46

   11 command: "(" "define-fun" "symbol" . "(" sorted_var_list ")" sort term ")"

    "("  shift, and go to state 130


State 47

    8 command: "(" "define-sort" "symbol" . "(" symbol_list ")" sort ")"

    "("  shift, and go to state 131


State 48

   27 command: "(" "exit" ")" .

    $default  reduce using rule 27 (command)


State 49

   19 command: "(" "get-assertions" ")" .

    $default  reduce using rule 19 (command)


State 50

   24 command: "(" "get-assignment" ")" .

    $default  reduce using rule 24 (command)


State 51

   29 info_flag: "keyword" .

    $default  reduce using rule 29 (info_flag)


State 52

   26 command: "(" "get-info" info_flag . ")"

    ")"  shift, and go to state 132


State 53

   20 command: "(" "get-model" ")" .

    $default  reduce using rule 20 (command)


State 54

   25 command: "(" "get-option" "keyword" . ")"

    ")"  shift, and go to state 133


State 55

   21 command: "(" "get-proof" ")" .

    $default  reduce using rule 21 (command)


State 56

   22 command: "(" "get-unsat-core" ")" .

    $default  reduce using rule 22 (command)


State 57

   23 command: "(" "get-value" term_list_ . ")"
   34 term_list_: term_list_ . term

    "("            shift, and go to state 27
    ")"            shift, and go to state 134
    "bool"         shift, and go to state 28
    "binary"       shift, and go to state 29
    "decimal"      shift, and go to state 30
    "hexadecimal"  shift, and go to state 31
    "number"       shift, and go to state 32
    "string"       shift, and go to state 33
    "regex"        shift, and go to state 34
    "symbol"       shift, and go to state 35

    term             go to state 135
    qual_identifier  go to state 37
    term_constant    go to state 38
    identifier       go to state 39
    spec_constant    go to state 40


State 58

   35 term_list_: term .

    $default  reduce using rule 35 (term_list_)


State 59

   13 command: "(" "pop" "number" . ")"

    ")"  shift, and go to state 136


State 60

   12 command: "(" "push" "number" . ")"

    ")"  shift, and go to state 137


State 61

    4 command: "(" "set-logic" "symbol" . ")"

    ")"  shift, and go to state 138


State 62

  104 attribute: "keyword" . attribute_value
  105          | "keyword" .

    "("            shift, and go to state 139
    "bool"         shift, and go to state 28
    "binary"       shift, and go to state 29
    "decimal"      shift, and go to state 30
    "hexadecimal"  shift, and go to state 31
    "number"       shift, and go to state 32
    "string"       shift, and go to state 33
    "regex"        shift, and go to state 34
    "symbol"       shift, and go to state 140

    $default  reduce using rule 105 (attribute)

    attribute_value  go to state 141
    spec_constant    go to state 142


State 63

    6 command: "(" "set-info" attribute . ")"

    ")"  shift, and go to state 143


State 64

    5 command: "(" "set-option" option . ")"

    ")"  shift, and go to state 144


State 65

   28 option: attribute .

    $default  reduce using rule 28 (option)


State 66

   99 qual_identifier: "(" . "as" identifier sort ")"
  119 identifier: "(" . "_" "symbol" numeral_list_ ")"

    "_"   shift, and go to state 68
    "as"  shift, and go to state 69


State 67

   36 term: "(" "!" . term attribute_list_ ")"

    "("            shift, and go to state 27
    "bool"         shift, and go to state 28
    "binary"       shift, and go to state 29
    "decimal"      shift, and go to state 30
    "hexadecimal"  shift, and go to state 31
    "number"       shift, and go to state 32
    "string"       shift, and go to state 33
    "regex"        shift, and go to state 34
    "symbol"       shift, and go to state 35

    term             go to state 145
    qual_identifier  go to state 37
    term_constant    go to state 38
    identifier       go to state 39
    spec_constant    go to state 40


State 68

  119 identifier: "(" "_" . "symbol" numeral_list_ ")"

    "symbol"  shift, and go to state 146


State 69

   99 qual_identifier: "(" "as" . identifier sort ")"

    "("       shift, and go to state 147
    "symbol"  shift, and go to state 35

    identifier  go to state 148


State 70

   37 term: "(" "exists" . "(" sorted_var_list_ ")" term ")"

    "("  shift, and go to state 149


State 71

   38 term: "(" "forall" . "(" sorted_var_list_ ")" term ")"

    "("  shift, and go to state 150


State 72

   39 term: "(" "let" . "(" var_binding_list_ ")" term ")"

    "("  shift, and go to state 151


State 73

   40 term: "(" "and" . term_list_ ")"

    "("            shift, and go to state 27
    "bool"         shift, and go to state 28
    "binary"       shift, and go to state 29
    "decimal"      shift, and go to state 30
    "hexadecimal"  shift, and go to state 31
    "number"       shift, and go to state 32
    "string"       shift, and go to state 33
    "regex"        shift, and go to state 34
    "symbol"       shift, and go to state 35

    term_list_       go to state 152
    term             go to state 58
    qual_identifier  go to state 37
    term_constant    go to state 38
    identifier       go to state 39
    spec_constant    go to state 40


State 74

   41 term: "(" "or" . term_list_ ")"

    "("            shift, and go to state 27
    "bool"         shift, and go to state 28
    "binary"       shift, and go to state 29
    "decimal"      shift, and go to state 30
    "hexadecimal"  shift, and go to state 31
    "number"       shift, and go to state 32
    "string"       shift, and go to state 33
    "regex"        shift, and go to state 34
    "symbol"       shift, and go to state 35

    term_list_       go to state 153
    term             go to state 58
    qual_identifier  go to state 37
    term_constant    go to state 38
    identifier       go to state 39
    spec_constant    go to state 40


State 75

   42 term: "(" "not" . term ")"

    "("            shift, and go to state 27
    "bool"         shift, and go to state 28
    "binary"       shift, and go to state 29
    "decimal"      shift, and go to state 30
    "hexadecimal"  shift, and go to state 31
    "number"       shift, and go to state 32
    "string"       shift, and go to state 33
    "regex"        shift, and go to state 34
    "symbol"       shift, and go to state 35

    term             go to state 154
    qual_identifier  go to state 37
    term_constant    go to state 38
    identifier       go to state 39
    spec_constant    go to state 40


State 76

   43 term: "(" "-" . term ")"
   44     | "(" "-" . term term ")"

    "("            shift, and go to state 27
    "bool"         shift, and go to state 28
    "binary"       shift, and go to state 29
    "decimal"      shift, and go to state 30
    "hexadecimal"  shift, and go to state 31
    "number"       shift, and go to state 32
    "string"       shift, and go to state 33
    "regex"        shift, and go to state 34
    "symbol"       shift, and go to state 35

    term             go to state 155
    qual_identifier  go to state 37
    term_constant    go to state 38
    identifier       go to state 39
    spec_constant    go to state 40


State 77

   45 term: "(" "+" . term_list_ ")"

    "("            shift, and go to state 27
    "bool"         shift, and go to state 28
    "binary"       shift, and go to state 29
    "decimal"      shift, and go to state 30
    "hexadecimal"  shift, and go to state 31
    "number"       shift, and go to state 32
    "string"       shift, and go to state 33
    "regex"        shift, and go to state 34
    "symbol"       shift, and go to state 35

    term_list_       go to state 156
    term             go to state 58
    qual_identifier  go to state 37
    term_constant    go to state 38
    identifier       go to state 39
    spec_constant    go to state 40


State 78

   46 term: "(" "*" . term_list_ ")"

    "("            shift, and go to state 27
    "bool"         shift, and go to state 28
    "binary"       shift, and go to state 29
    "decimal"      shift, and go to state 30
    "hexadecimal"  shift, and go to state 31
    "number"       shift, and go to state 32
    "string"       shift, and go to state 33
    "regex"        shift, and go to state 34
    "symbol"       shift, and go to state 35

    term_list_       go to state 157
    term             go to state 58
    qual_identifier  go to state 37
    term_constant    go to state 38
    identifier       go to state 39
    spec_constant    go to state 40


State 79

   47 term: "(" "=" . term term ")"

    "("            shift, and go to state 27
    "bool"         shift, and go to state 28
    "binary"       shift, and go to state 29
    "decimal"      shift, and go to state 30
    "hexadecimal"  shift, and go to state 31
    "number"       shift, and go to state 32
    "string"       shift, and go to state 33
    "regex"        shift, and go to state 34
    "symbol"       shift, and go to state 35

    term             go to state 158
    qual_identifier  go to state 37
    term_constant    go to state 38
    identifier       go to state 39
    spec_constant    go to state 40


State 80

   48 term: "(" "!=" . term term ")"

    "("            shift, and go to state 27
    "bool"         shift, and go to state 28
    "binary"       shift, and go to state 29
    "decimal"      shift, and go to state 30
    "hexadecimal"  shift, and go to state 31
    "number"       shift, and go to state 32
    "string"       shift, and go to state 33
    "regex"        shift, and go to state 34
    "symbol"       shift, and go to state 35

    term             go to state 159
    qual_identifier  go to state 37
    term_constant    go to state 38
    identifier       go to state 39
    spec_constant    go to state 40


State 81

   49 term: "(" ">" . term term ")"

    "("            shift, and go to state 27
    "bool"         shift, and go to state 28
    "binary"       shift, and go to state 29
    "decimal"      shift, and go to state 30
    "hexadecimal"  shift, and go to state 31
    "number"       shift, and go to state 32
    "string"       shift, and go to state 33
    "regex"        shift, and go to state 34
    "symbol"       shift, and go to state 35

    term             go to state 160
    qual_identifier  go to state 37
    term_constant    go to state 38
    identifier       go to state 39
    spec_constant    go to state 40


State 82

   50 term: "(" ">=" . term term ")"

    "("            shift, and go to state 27
    "bool"         shift, and go to state 28
    "binary"       shift, and go to state 29
    "decimal"      shift, and go to state 30
    "hexadecimal"  shift, and go to state 31
    "number"       shift, and go to state 32
    "string"       shift, and go to state 33
    "regex"        shift, and go to state 34
    "symbol"       shift, and go to state 35

    term             go to state 161
    qual_identifier  go to state 37
    term_constant    go to state 38
    identifier       go to state 39
    spec_constant    go to state 40


State 83

   51 term: "(" "<" . term term ")"

    "("            shift, and go to state 27
    "bool"         shift, and go to state 28
    "binary"       shift, and go to state 29
    "decimal"      shift, and go to state 30
    "hexadecimal"  shift, and go to state 31
    "number"       shift, and go to state 32
    "string"       shift, and go to state 33
    "regex"        shift, and go to state 34
    "symbol"       shift, and go to state 35
